Fixed Background anims
Waves scale properly on window.
No scrollbar regardless of size.
Font changes.
Logo location.

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -2,7 +2,7 @@ body{ margin:0px;
       padding:0px; 
       
 	  background-repeat:repeat-x; background-attachment:fixed;
-	  background-color:#0099ff;}
+	  background-color:#FFF;}
 	  
 a{ color:#FFF; text-decoration:none; font-weight:bold; font-size:20px;}
 a:hover{ color: #06C; text-decoration:none;font-weight:bold; font-size:20px;}
@@ -90,14 +90,17 @@ td.forum
 {
 	height: 100px;
 	background-color: #FFF;
+	display: flex;
+	align-items: center;
+	margin-left: 80px;
 }
 
 .nameLogo
 {
-	font-size: 3em;
+	font-size: 48px;
 	vertical-align: middle;
 	display: inline;
-	font-family:'Ink Free';
+	font-family: 'Libre Baskerville', 'serif';
 }
 
 .btnAlign
@@ -117,6 +120,11 @@ td.forum
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: calc(91vh - 150px);
+	height: calc(90vh - 130px);
 	text-align: center;
+}
+
+.noScroll
+{
+	overflow: hidden;
 }
